add ukulele service

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 note.sequence=C,C#,D,D#,E,F,F#,G,G#,A,A#,B
+ukulele.open.notes=A,E,C,G
+
 tone.major.pattern=0,2,4,5,7,9,11
 tone.minor.pattern=0,2,3,5,7,8,10
