--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 note.sequence=C,C#,D,D#,E,F,F#,G,G#,A,A#,B
 ukulele.open.notes=A,E,C,G
 guitar.open.notes=E,B,G,D,A,E
+piano.start.note=C
+drum.midi.banks=ABC
+drum.midi.start.note=C
 
 tone.major.pattern=0,2,4,5,7,9,11
 tone.minor.pattern=0,2,3,5,7,8,10
