add text controllers

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,6 +2,7 @@ note.sequence=C,C#,D,D#,E,F,F#,G,G#,A,A#,B
 ukulele.open.notes=A,E,C,G
 guitar.open.notes=E,B,G,D,A,E
 piano.start.note=C
+piano.black.keys=2,4,7,9,11
 drum.midi.banks=ABC
 drum.midi.start.note=C
 
