--- a/build.gradle
+++ b/build.gradle
@@ -13,13 +13,20 @@ configurations {
     }
 }
 
+ext {
+    springFoxBootStarter = '3.0.0'
+}
+
 repositories {
     mavenCentral()
 }
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'io.springfox:springfox-boot-starter:' + springFoxBootStarter
+
+    implementation 'org.apache.commons:commons-lang3:3.0'
+
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
-    implementation 'org.apache.commons:commons-lang3:3.0'
 }
