add instrument names service

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+instrument.names=guitar,ukulele,pianoMidi,drumMidi
+
 note.sequence=C,C#,D,D#,E,F,F#,G,G#,A,A#,B
 ukulele.open.notes=A,E,C,G
 guitar.open.notes=E,B,G,D,A,E
