--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -16,6 +16,7 @@ dependencies {
     implementation 'io.springfox:springfox-boot-starter:' + springFoxBootStarter
 
     implementation 'org.apache.commons:commons-lang3'
+    implementation 'javax.validation:validation-api'
 
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
