--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,12 +1,18 @@
-instrument.names=guitar,ukulele,pianoMidi,drumMidi
-
 note.sequence=C,C#,D,D#,E,F,F#,G,G#,A,A#,B
-ukulele.open.notes=A,E,C,G
-guitar.open.notes=E,B,G,D,A,E
-piano.start.note=C
-piano.black.keys=2,4,7,9,11
-drum.midi.banks=ABC
-drum.midi.start.note=C
 
 tone.major.pattern=0,2,4,5,7,9,11
 tone.minor.pattern=0,2,3,5,7,8,10
+
+ukulele.strings.amount=4
+ukulele.keys.amount=13
+ukulele.open.notes=A,E,C,G
+
+guitar.strings.amount=6
+guitar.keys.amount=25
+guitar.open.notes=E,B,G,D,A,E
+
+piano.start.note=C
+piano.black.keys=2,4,7,9,11
+
+drum.midi.banks=ABC
+drum.midi.start.note=C
