--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     implementation 'io.springfox:springfox-boot-starter:' + springFoxBootStarter
 
     implementation 'org.apache.commons:commons-lang3:3.0'
+    implementation 'javax.validation:validation-api'
 
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
